# tkt20010

./: .coveragerc  .gitignore  LICENSE.md  README.md  pyproject.toml  tasks.py
.github/workflows/: quality-check.yml
docs/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: main.py  neuroverkko.py  nn-numpy.py  oma_verkko.py  referenssitaso.py  vertailu-ristiinvalidointi.py  vertailu.py
src/app/static/: index.js
src/app/templates/: index.html
src/tests/: neuroverkko_test.py
src/utils/: utils.py
src/verkko/: neuroverkko.py
viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
