[tool.poetry]
name = "mnist"
version = "0.1.0"
description = "Tiralabran harjoitustyö, loppukesä 2022. MNIST-kuvantunnistus."
authors = ["Pontus <pontus.hedlund@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
